--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,15 +1,43 @@
-h1,
-h2,
-h4,
-p {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: normal;
-  font-size: 50px;
-  color: white;
+body {
+  background-color: black;
   text-align: center;
 }
 
-h4 {
+h1,
+h2,
+h4,
+p,
+a {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: normal;
+  color: white;
+  display: block;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+h2 {
+  font-size: 42px;
+  font-weight: 300;
+}
+
+p {
+  font-size: 21px;
+  color: grey;
+}
+
+p.end {
+  text-align: right;
+}
+
+a {
   font-size: 16px;
   color: aquamarine;
+}
+
+div {
+  display: block;
+  margin: 15px;
 }
